// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UnitInputField > should handles onChange and selection 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  vertical-align: middle;
  fill: #b3144d;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
}

.emotion-6 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.emotion-8:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus,
.emotion-8:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true'])active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-8:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus>.emotion-11,
.emotion-8:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true'])active>.emotion-11 {
  border-right-color: #8c40ef;
}

.emotion-8:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover,
.emotion-8:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #8c40ef;
}

.emotion-8:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover>.emotion-11,
.emotion-8:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus>.emotion-11 {
  border-right-color: #8c40ef;
}

.emotion-8[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-8[data-readonly='true']:active {
  border-color: #d9dadd;
}

.emotion-8[data-size='small'] {
  height: 32px;
}

.emotion-8[data-size='medium'] {
  height: 40px;
}

.emotion-8[data-size='large'] {
  height: 48px;
}

.emotion-8[data-success='true'] {
  border: 1px solid #22674e;
}

.emotion-8[data-success='true']>.emotion-11 {
  border-right-color: #22674e;
}

.emotion-8[data-success='true']:active {
  border: 1px solid #22674e;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-8[data-success='true']:active>.emotion-11 {
  border-right-color: #22674e;
}

.emotion-8[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-8[data-error='true']>.emotion-11 {
  border-right-color: #b3144d;
}

.emotion-8[data-error='true']>.emotion-11:hover {
  border-right-color: #b3144d;
}

.emotion-8[data-error='true']:active {
  border: 1px solid #b3144d;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-8[data-error='true']:active>.emotion-11 {
  border-right-color: #b3144d;
}

.emotion-8[data-error='true']:active>.emotion-11:hover {
  border-right-color: #b3144d;
}

.emotion-8[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-8[data-disabled='true']>.emotion-11 {
  border-right-color: #e9eaeb;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 16px;
  border-right: 1px solid #d9dadd;
  width: 100%;
  height: 100%;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
  color: #3f4250;
}

.emotion-12[data-size="small"] {
  padding-left: 8px;
}

.emotion-12::-webkit-input-placeholder {
  color: #727683;
}

.emotion-12::-moz-placeholder {
  color: #727683;
}

.emotion-12:-ms-input-placeholder {
  color: #727683;
}

.emotion-12::placeholder {
  color: #727683;
}

.emotion-12:disabled {
  cursor: not-allowed;
}

.emotion-12:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-12:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-12:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-12:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-15 {
  width: 100%;
  width: 200px;
}

.emotion-15 #unit {
  border: none;
  background: transparent;
}

.emotion-15 #unit:focus,
.emotion-15 #unit:active {
  box-shadow: none;
}

.emotion-17 {
  display: inherit;
}

.emotion-17[data-container-full-width="true"] {
  width: 100%;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
  width: 100%;
  overflow: hidden;
}

.emotion-21[data-size='small'] {
  height: 32px;
  padding-left: 8px;
}

.emotion-21[data-size='medium'] {
  height: 40px;
}

.emotion-21[data-size='large'] {
  height: 48px;
}

.emotion-21[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-21[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-21[data-state='neutral']:not([data-disabled='true']):hover,
.emotion-21[data-state='neutral']:not([data-disabled='true']):focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-21[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-21[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-21[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-21[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-21[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-21[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-21[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-21:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-21[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-21[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-24 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-28 {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-28 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-30 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.emotion-30:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-30:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-30:hover,
.emotion-30:active {
  background: #792dd4;
  color: #f9f9fa;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-1"
        >
          <label
            class="emotion-4 emotion-5"
            for=":r6:"
          >
            Test
          </label>
          <svg
            class="emotion-6 emotion-7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 2h4l-.79 7.91 6.45-4.64 2 3.46L14.42 12l7.24 3.27-2 3.46-6.45-4.64L14 22h-4l.79-7.91-6.45 4.64-2-3.46L9.58 12 2.34 8.73l2-3.46 6.45 4.64z"
            />
          </svg>
        </div>
        <div
          class="emotion-8 emotion-9"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-size="large"
          data-success="false"
        >
          <div
            class="emotion-10 emotion-11"
            id="input-field"
          >
            <input
              aria-invalid="false"
              class="emotion-12 emotion-13"
              data-size="large"
              data-testid="unit-input"
              max="9007199254740991"
              min="0"
              name="test-value"
              placeholder="input"
              required=""
              step="1"
              type="number"
              value="100"
            />
          </div>
          <div
            aria-label="test-unit"
            class="emotion-14 emotion-15 emotion-16"
          >
            <div
              aria-controls=":r9:"
              aria-describedby=":r9:"
              class="emotion-17 emotion-18"
              data-container-full-width="true"
              tabindex="0"
            >
              <div
                class="emotion-0 emotion-1"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="emotion-21 emotion-22"
                  data-disabled="false"
                  data-dropdownvisible="false"
                  data-readonly="false"
                  data-size="large"
                  data-state="neutral"
                  data-testid="select-input-test-unit"
                  id="unit"
                  role="combobox"
                  tabindex="0"
                >
                  <div
                    class="emotion-23 emotion-24 emotion-5"
                  >
                    Days
                  </div>
                  <div
                    class="emotion-26 emotion-27"
                  >
                    <svg
                      aria-label="show dropdown"
                      class="emotion-28 emotion-7"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="emotion-30 emotion-31"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`UnitInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.emotion-6:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus,
.emotion-6:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true'])active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-6:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus>.emotion-9,
.emotion-6:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true'])active>.emotion-9 {
  border-right-color: #8c40ef;
}

.emotion-6:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover,
.emotion-6:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #8c40ef;
}

.emotion-6:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover>.emotion-9,
.emotion-6:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus>.emotion-9 {
  border-right-color: #8c40ef;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-6[data-readonly='true']:active {
  border-color: #d9dadd;
}

.emotion-6[data-size='small'] {
  height: 32px;
}

.emotion-6[data-size='medium'] {
  height: 40px;
}

.emotion-6[data-size='large'] {
  height: 48px;
}

.emotion-6[data-success='true'] {
  border: 1px solid #22674e;
}

.emotion-6[data-success='true']>.emotion-9 {
  border-right-color: #22674e;
}

.emotion-6[data-success='true']:active {
  border: 1px solid #22674e;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-6[data-success='true']:active>.emotion-9 {
  border-right-color: #22674e;
}

.emotion-6[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-6[data-error='true']>.emotion-9 {
  border-right-color: #b3144d;
}

.emotion-6[data-error='true']>.emotion-9:hover {
  border-right-color: #b3144d;
}

.emotion-6[data-error='true']:active {
  border: 1px solid #b3144d;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-6[data-error='true']:active>.emotion-9 {
  border-right-color: #b3144d;
}

.emotion-6[data-error='true']:active>.emotion-9:hover {
  border-right-color: #b3144d;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-6[data-disabled='true']>.emotion-9 {
  border-right-color: #e9eaeb;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 16px;
  border-right: 1px solid #d9dadd;
  width: 100%;
  height: 100%;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
  color: #3f4250;
}

.emotion-10[data-size="small"] {
  padding-left: 8px;
}

.emotion-10::-webkit-input-placeholder {
  color: #727683;
}

.emotion-10::-moz-placeholder {
  color: #727683;
}

.emotion-10:-ms-input-placeholder {
  color: #727683;
}

.emotion-10::placeholder {
  color: #727683;
}

.emotion-10:disabled {
  cursor: not-allowed;
}

.emotion-10:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-10:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-10:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-10:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-13 {
  width: 100%;
  width: 200px;
}

.emotion-13 #unit {
  border: none;
  background: transparent;
}

.emotion-13 #unit:focus,
.emotion-13 #unit:active {
  box-shadow: none;
}

.emotion-15 {
  display: inherit;
}

.emotion-15[data-container-full-width="true"] {
  width: 100%;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
  width: 100%;
  overflow: hidden;
}

.emotion-19[data-size='small'] {
  height: 32px;
  padding-left: 8px;
}

.emotion-19[data-size='medium'] {
  height: 40px;
}

.emotion-19[data-size='large'] {
  height: 48px;
}

.emotion-19[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-19[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-19[data-state='neutral']:not([data-disabled='true']):hover,
.emotion-19[data-state='neutral']:not([data-disabled='true']):focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-19[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-19[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-19[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-19[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-19[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-19[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-19[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-19:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-19[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-19[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-22 {
  color: #727683;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-26 {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-26 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-1"
        >
          <label
            class="emotion-4 emotion-5"
            for=":r0:"
          >
            Test
          </label>
        </div>
        <div
          class="emotion-6 emotion-7"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-size="large"
          data-success="false"
        >
          <div
            class="emotion-8 emotion-9"
            id="input-field"
          >
            <input
              aria-invalid="false"
              class="emotion-10 emotion-11"
              data-size="large"
              data-testid="unit-input"
              max="9007199254740991"
              min="0"
              name="test-value"
              placeholder="0"
              step="1"
              type="number"
              value=""
            />
          </div>
          <div
            aria-label="test-unit"
            class="emotion-12 emotion-13 emotion-14"
          >
            <div
              aria-controls=":r3:"
              aria-describedby=":r3:"
              class="emotion-15 emotion-16"
              data-container-full-width="true"
              tabindex="0"
            >
              <div
                class="emotion-0 emotion-1"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="emotion-19 emotion-20"
                  data-disabled="false"
                  data-dropdownvisible="false"
                  data-readonly="false"
                  data-size="large"
                  data-state="neutral"
                  data-testid="select-input-test-unit"
                  id="unit"
                  role="combobox"
                  tabindex="0"
                >
                  <p
                    class="emotion-21 emotion-22 emotion-5"
                  >
                    Select item
                  </p>
                  <div
                    class="emotion-24 emotion-25"
                  >
                    <svg
                      aria-label="show dropdown"
                      class="emotion-26 emotion-27"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
